try fonttry to fix unreadable fonts

--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
 
 @font-face{
     font-family: 'Poppins-SemiBold';
-    src: url('/assets/font/Poppins-SemiBold.ttf')
+    src: url('/assets/font/Poppins-SemiBold.ttf');
 }
 
 body{
